--- a/app/views/tenon/assets/crop.html.haml
+++ b/app/views/tenon/assets/crop.html.haml
@@ -1,7 +1,11 @@
 .asset-cropping
   .modal-backdrop.fade.in
   .preview
-    = image_tag(@asset.attachment.url, id: 'cropbox', data: { width: @asset.dimensions(:original)[0], height: @asset.dimensions(:original)[1] })
+    .modal-header
+      %button{ type: 'button', class: 'close', data: { dismiss: 'modal' }, :'aria-hidden' => 'true' } &times;
+      %h4#myModalLabel{ class: 'modal-title'}
+        Crop
+    .image-holder= image_tag(@asset.attachment.url, id: 'cropbox', data: { width: @asset.dimensions(:original)[0], height: @asset.dimensions(:original)[1] })
 
     = form_for @asset, data: {remote: true} do |f|
       - [:crop_x, :crop_y, :crop_w, :crop_h].each do |field|
@@ -10,5 +14,4 @@
         = f.check_box :duplicate, checked: true, class: 'tn-checkbox-left'
         = f.label :duplicate, "Create New Asset From Crop?", class: 'left'
         .right
-          = button_tag "Cancel", class: 'cancel btn btn-info'
           = f.submit "Save", class: 'btn btn-primary'
