--- a/app/assets/stylesheets/tenon/ui/forms.css.scss
+++ b/app/assets/stylesheets/tenon/ui/forms.css.scss
@@ -1,27 +1,27 @@
 .fields {
+  margin-bottom: 20px;
   padding: 0;
   border: 0;
-  margin-bottom: 20px;
 
   .form-group {
     clear: both;
-    margin: 20px 0px;
+    margin: 20px 0;
 
     &:first-child {
-      margin-top: 0px;
+      margin-top: 0;
     }
 
     &:last-child {
-      margin-bottom: 0px;
+      margin-bottom: 0;
     }
   }
 
   input[type=text], input[type=password], textarea, select {
-    margin: 3px 0px;
+    margin: 3px 0;
     padding-left: 5px;
     width: 100%;
-    /* @include transition(all 0.3s); */
-    border: 0px;
+    // @include transition(all 0.3s);
+    border: 0;
   }
 }
 
@@ -32,7 +32,7 @@
 }
 
 label, input[type=text], input[type=password], textarea, .explanation, h4.box-label {
-  margin: 2px 0px;
+  margin: 2px 0;
 }
 
 textarea {
@@ -53,16 +53,16 @@ input[type=text], input[type=password] {
 }
 
 .tn-checkbox {
-  @include styled_checkbox;
+  @include styled-checkbox;
   opacity: 0;
 }
 
 .tn-checkbox-right {
-  @include styled_checkbox($float: right);
+  @include styled-checkbox($float: right);
 }
 
 .tn-checkbox-left {
-  @include styled_checkbox($float: left);
+  @include styled-checkbox($float: left);
 }
 
 label[for] {
@@ -71,11 +71,11 @@ label[for] {
 
 .fields .box, form .box {
   margin-bottom: 15px;
-  background: white;
+  background: #fff;
 
   .content, .form-group {
 
-    @include media($mobile_breakpoint) {
+    @include media($mobile-breakpoint) {
 
       button {
         margin-bottom: 5px;
@@ -86,7 +86,7 @@ label[for] {
   }
 
   input[type=text], input[type=password] {
-    padding: 0px;
+    padding: 0;
     height: auto;
     color: $tn-dark-grey;
     font-weight: bold;
@@ -94,7 +94,7 @@ label[for] {
 
     &:focus {
       outline: none;
-      border: 0px;
+      border: 0;
     }
   }
 
@@ -120,12 +120,12 @@ label[for] {
 .fields .box, form .box, .modal-body {
 
   .form-group {
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 10px;
   }
 
   .form-group.inline {
-    margin: 3px 0px;
+    margin: 3px 0;
 
     input[type=checkbox], input[type=text] {
       float: right;
@@ -147,7 +147,7 @@ label[for] {
   }
 
   .form-group.bordered {
-    margin-bottom: 0px;
+    margin-bottom: 0;
     padding-bottom: 10px;
     border-bottom: 2px solid $tn-light-grey;
   }
