fixed a bunch of scss-lint issues

--- a/app/assets/stylesheets/tenon/colors-custom.css.scss
+++ b/app/assets/stylesheets/tenon/colors-custom.css.scss
@@ -1,16 +1,16 @@
 // Use American 'color' in variable names for consistency with CSS keywords.
 
 // Change these on a per-site basis
-$tn-client-color: #9C0F17;
+$tn-client-color: #9c0f17;
 $tn-primary: #ff6a00;
 $tn-comp: #43239a;
 $tn-nav: #12111a;
 $tn-sidebar: #242133;
 $tn-sidebar-highlight: #3a3848;
 $tn-button-primary-bg: #978fcc;
-$tn-button-primary-fg: white;
+$tn-button-primary-fg: #fff;
 $tn-button-info-bg: $tn-primary;
-$tn-button-info-fg: white;
+$tn-button-info-fg: #fff;
 $tn-box-label: #04555d;
 $tn-label: #162433;
 $tn-sidebar-label: #504d5c;
