--- a/app/assets/stylesheets/tenon/layout/dashboard.css.scss
+++ b/app/assets/stylesheets/tenon/layout/dashboard.css.scss
@@ -5,7 +5,7 @@
 
   h1 {
     padding: 40px;
-    color: white;
+    color: #fff;
     font-weight: normal;
     font-size: 40px;
     text-shadow: 1px 1px 5px darken($tn-client-color, 10%);
