--- a/app/assets/stylesheets/tenon/typography.css.scss
+++ b/app/assets/stylesheets/tenon/typography.css.scss
@@ -38,16 +38,16 @@ h3 {
 }
 
 h4 {
-  margin: 0px;
+  margin: 0;
   font-size: 18px;
 }
 
 h5 {
-  margin: 0px;
+  margin: 0;
   font-size: 14px;
 }
 
 h6 {
-  margin: 0px;
+  margin: 0;
   font-size: 12px;
 }
