--- a/app/assets/stylesheets/tenon/ui/generic-loader.css.scss
+++ b/app/assets/stylesheets/tenon/ui/generic-loader.css.scss
@@ -9,7 +9,7 @@
   height: 150px;
   border-radius: 15px;
   background: $tn-dark-grey;
-  box-shadow: 0px 0px 5px $tn-dark-grey;
+  box-shadow: 0 0 5px $tn-dark-grey;
   text-align: center;
   opacity: 0.9;
 
