--- a/app/assets/stylesheets/tenon/ui/medium-editor.css.scss
+++ b/app/assets/stylesheets/tenon/ui/medium-editor.css.scss
@@ -1,9 +1,9 @@
 .medium-toolbar-arrow-under:after {
-  border-color: $tn-primary transparent transparent transparent;
+  border-color: $tn-primary transparent transparent;
 }
 
 .medium-toolbar-arrow-over:before {
-  border-color: transparent transparent $tn-primary transparent;
+  border-color: transparent transparent $tn-primary;
 }
 
 .medium-editor-toolbar-form-anchor {
