--- a/app/views/tenon/assets/_form.html.haml
+++ b/app/views/tenon/assets/_form.html.haml
@@ -8,7 +8,7 @@
 
       .form-group
         .browse-button-holder
-          .fileUpload.btn.btn-primary.browse
+          .fileupload.btn.btn-primary.browse
             %span#choose-files Choose Files
             %input{ :type => 'file', :class => 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
 
