--- a/app/assets/stylesheets/tenon/colors-named.css.scss
+++ b/app/assets/stylesheets/tenon/colors-named.css.scss
@@ -7,8 +7,8 @@ $tn-grey: #ababab;
 $tn-dark-grey: #878787;
 $tn-slate: #242133;
 
-$tn-black: #333333;
-$tn-white: white;
+$tn-black: #333;
+$tn-white: #fff;
 $tn-off-white: #f9f9f9;
 
 // Tenon content
@@ -17,6 +17,6 @@ $tc-med-grey: $tn-med-grey;
 $tc-dark-grey: $tn-dark-grey;
 
 // Medium Editor
-$medium-editor-toolbar-border: transparentize(white, 0.6);
+$medium-editor-toolbar-border: transparentize(#fff, 0.6);
 $medium-editor-toolbar-hover: $medium-editor-toolbar-border;
 $medium-editor-toolbar-active: $medium-editor-toolbar-border;
