--- a/app/assets/stylesheets/tenon/ui/asset-uploads.css.scss
+++ b/app/assets/stylesheets/tenon/ui/asset-uploads.css.scss
@@ -6,8 +6,8 @@
     opacity: 1;
 
     &.hidden {
-      margin: 0px;
-      height: 0px;
+      margin: 0;
+      height: 0;
       opacity: 0;
     }
 
@@ -15,13 +15,12 @@
       position: absolute;
       padding: 0 2%;
       height: 24px;
-      color: white;
+      color: #fff;
       font-weight: 600;
       font-size: 12px;
       line-height: 24px;
     }
 
-    .progress-bar {}
   }
 }
 
