--- a/app/assets/stylesheets/tenon/ui/progress-bars.css.scss
+++ b/app/assets/stylesheets/tenon/ui/progress-bars.css.scss
@@ -63,7 +63,7 @@
   background-color: #428bca;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
-  color: #ffffff;
+  color: #fff;
   text-align: center;
   font-size: 12px;
   -webkit-transition: width 0.6s ease;
