--- a/app/assets/stylesheets/tenon/ui/tenon-content-popped-out.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content-popped-out.css.scss
@@ -3,11 +3,11 @@
   position: absolute;
   top: 0;
   left: 0;
-  overflow: auto;
   z-index: 1029;
+  overflow: auto;
+  min-height: 500px;
   width: 100%;
   height: 100%;
-  min-height: 500px;
 
   .tn-tc-popped-out-backdrop {
     @include transition(opacity 0.25s ease-in-out);
@@ -17,7 +17,7 @@
     z-index: 1020;
     width: 100%;
     height: 100%;
-    background: white;
+    background: #fff;
     opacity: 1;
   }
 
@@ -37,8 +37,13 @@
   }
 
   .tn-tc-wrap {
+    margin: 0 auto;
+    width: 90%;
+
     &.mobile-breakpoint {
+
       .tn-tc-sizes {
+
         a, a.tn-tc-pop-out-close {
           display: block;
           float: left;
@@ -48,21 +53,18 @@
       }
     }
 
-    margin: 0px auto;
-    width: 90%;
-
     .tenon-content {
-      border-top: none;
       margin-top: 0;
       padding-top: 0;
+      border-top: 0;
     }
 
     .tn-tc-sizes {
       display: block;
+      overflow: hidden;
       margin-bottom: 10px;
       padding-bottom: 10px;
       border-bottom: 1px solid $tn-med-grey;
-      overflow: hidden;
 
       a {
         display: inline-block;
@@ -82,9 +84,8 @@
     .tn-tc-topbar {
       display: none;
     }
-    .one, .two, .three, .four, .five, .six,
 
-    .seven, .eight, .nine, .ten, .eleven, .twelve {
+    .one, .two, .three, .four, .five, .six, .seven, .eight, .nine, .ten, .eleven, .twelve {
       @include transition(none);
     }
   }
